--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PartCode>
+﻿@model PagedViewModel<PartCode>
 
 @{
     ViewData["Title"] = "Index";
@@ -41,7 +41,7 @@
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                                Ad
                             </th>
                             <th class="actionBtns">
                                 <a asp-action="Create" class="btn btn-success btn-icon"><i class="icofont-plus"></i></a>
@@ -49,7 +49,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Items)
                         {
                             <tr data-entity-id="@item.Id">
                                 <td>
@@ -67,10 +67,13 @@
                     </tbody>
                 </table>
             </div>
+            @Model.GetPagenation(Url, "Index", "Admin")
         </div>
     </div>
 </div>
-
+@section css{
+    <link type="text/css" rel="stylesheet" href="~/assets/css/pagination.css" />
+}
 @section js{
     <script src="~/libs/sweetalert/sweetalert.min.js"></script>
     <script>
