--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Auto_Part_WebUI.AppCode.Extensions
 @using Auto_Part_WebUI.Models.Entities.Membership
 @using Auto_Part_WebUI.Models.Entities
+@using Auto_Part_WebUI.Models.ViewModels
