--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Details.cshtml
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="product product-single row mb-4">
             <div class="col-md-6">
-                <div style="padding-top:30px;" class="product-gallery pg-vertical">
+                <div  class="mt-10 product-gallery pg-vertical">
                     <div class="product-single-carousel owl-carousel owl-theme owl-nav-inner row cols-1">
                         <figure class="product-image">
                             <img src="~/uploads/images/@Model.Product.ImagePath"
@@ -16,36 +16,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-5">
                 <div class="product-details">
                     <div class="product-navigation">
                         <ul class="breadcrumb breadcrumb-lg">
-                            <li><a href="demo23.html"><i class="d-icon-home"></i></a></li>
-                            <li><a href="#" class="active">Products</a></li>
-                            <li>Detail</li>
-                        </ul>
-
-                        <ul class="product-nav">
-                            <li class="product-nav-prev">
-                                <a href="#">
-                                    <i class="d-icon-arrow-left"></i> Prev
-                                    <span class="product-nav-popup">
-                                        <img src="images/product/product-thumb-prev.jpg"
-                                             alt="product thumbnail" width="110" height="123">
-                                        <span class="product-name">Sed egtas Dnte Comfort</span>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="product-nav-next">
-                                <a href="#">
-                                    Next <i class="d-icon-arrow-right"></i>
-                                    <span class="product-nav-popup">
-                                        <img src="images/product/product-thumb-next.jpg"
-                                             alt="product thumbnail" width="110" height="123">
-                                        <span class="product-name">Sed egtas Dnte Comfort</span>
-                                    </span>
-                                </a>
-                            </li>
+                            <li><a asp-action="index" asp-controller="home"><i class="d-icon-home"></i></a></li>
+                            <li><a asp-action="index" class="active">Məhsullar</a></li>
+                            <li>@Model.Product.Name</li>
                         </ul>
                     </div>
 
@@ -55,10 +32,6 @@
                         Aid Olduğu Maşın Brendi: <span class="product-brand">@Model.Product.Category.Brand.Name</span>
                         Kateqoriya: <span class="product-brand">@Model.Product.Category.Name</span>
                     </div>
-                    @*<div class="product-price">@foreach (var item in ViewBag.Pricings)
-                        {
-                            <span>@item.Price (@item.ProductType.Name)</span>
-                        }*@
                 </div>
                 <p class="product-short-desc">
                     @Model.Product.ShortDescription
@@ -91,16 +64,15 @@
                 <hr class="product-divider">
 
                 <div class="product-form product-qty">
-                    <label>QTY:</label>
+                    <label>Miqdar:</label>
                     <div class="product-form-group">
                         <div class="input-group">
-                            <button class="quantity-minus quantity-action d-icon-minus"></button>
-                            <input id="qty" class="quantity form-control" type="number" min="1" max="1000000">
-                            <button class="quantity-plus quantity-action d-icon-plus"></button>
+                            <button onclick="quantityAction()" class="quantity-minus quantity-action d-icon-minus"></button>
+                            <input onchange="quantityAction()" id="qty" class="quantity form-control" type="number" min="1" max="1000000">
+                            <button onclick="quantityAction()" class="quantity-plus quantity-action d-icon-plus"></button>
                         </div>
                         <button class="btn-product btn-cart">
-                            <i class="d-icon-bag"></i>Add To
-                            Cart
+                            <i class="d-icon-bag"></i>Səbətə Əlavə Et
                         </button>
                     </div>
                 </div>
@@ -177,7 +149,7 @@
             {
                 <div class="product text-center">
                     <figure class="product-media">
-                        <a href="demo23-product.html">
+                        <a asp-route-id="@item.Id">
                             <img src="~/uploads/images/@item.ImagePath" alt="product" width="234"
                                  height="259">
                         </a>
@@ -196,10 +168,10 @@
                     </figure>
                     <div class="product-details">
                         <div class="product-cat">
-                            <a href="demo23-shop.html">@item.Category.Name</a>
+                            <a asp-route-id="@item.Id">@item.Category.Name</a>
                         </div>
                         <h3 class="product-name">
-                            <a href="demo23-product.html">@item.Name</a>
+                            <a asp-route-id="@item.Id">@item.Name</a>
                         </h3>
                         <div class="product-price">
                             @foreach (var price in Model.Pricings)
@@ -242,7 +214,7 @@
             }
 
         });
-        $('.quantity-action').click(() => {
+        let quantityAction = () => {
             let types = document.querySelectorAll('.size');
             for (var i = 0; i < types.length; i++) {
                 if (types[i].getAttribute('class') == 'size active') {
@@ -262,7 +234,7 @@
                 }
             }
 
-        })
+        }
     </script>
 }
 
