--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/Components/Header/Default.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/Components/Header/Default.cshtml
@@ -64,7 +64,7 @@
                 </a>
                 <span class="divider"></span>
                 <div class="dropdown cart-dropdown type2 cart-offcanvas mr-0 mr-lg-2">
-                    <a href="~/assets/#" class="cart-toggle label-block link">
+                    <a asp-controller="shop" asp-action="Basket" class="cart-toggle label-block link">
                         <div class="cart-label d-lg-show">
                             <span class="cart-name">Səbət:</span>
                             <span class="cart-price">$0.00</span>
